progress report update

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,22 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-10@19:58:34|model.device] Starting timer.\n",
+      "[2024-05-13@18:25:52|model.device] Starting timer.\n",
       "Configuring torch device...\n",
       "Using device: cuda:0 aka cuda:0\n",
-      "[2024-05-10@19:58:35|model.device] Time elapsed: 40ms\n",
-      "[2024-05-10@19:58:35|model.tokenizer] Starting timer.\n",
-      "[2024-05-10@19:58:35|model.tokenizer] Time elapsed: 193ms\n",
-      "[2024-05-10@19:58:35|model.model] Starting timer.\n",
+      "[2024-05-13@18:25:52|model.device] Time elapsed: 48ms\n",
+      "[2024-05-13@18:25:52|model.tokenizer] Starting timer.\n",
+      "[2024-05-13@18:25:52|model.tokenizer] Time elapsed: 222ms\n",
+      "[2024-05-13@18:25:52|model.model] Starting timer.\n",
       "Obtaining model...\n",
-      "[2024-05-10@19:58:38|model.model] Time elapsed: 3s 250ms\n"
+      "[2024-05-13@18:25:56|model.model] Time elapsed: 3s 300ms\n"
      ]
     }
    ],
@@ -66,45 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choices:  [\"prints 'hello world' to the terminal\", 'prints values from 1 to 10', 'computes first 10 prime numbers', 'prints values from 0 to 22']\n",
-      "init = 0.0015%\n",
-      "prob = 0.1187%\n",
-      "prob = 0.0073%\n",
-      "prob = 0.0208%\n",
-      "prob = 0.0064%\n",
-      "prob = 0.0014%\n",
-      "prob = 0.0123%\n",
-      "prob = 0.0008%\n",
-      "overall = 0.000000000000000000000000000000023241246652254307163719878231634507057335395583300996692903378519561401772084161730614824%\n",
-      "init = 0.0015%\n",
-      "prob = 0.0024%\n",
-      "prob = 0.0032%\n",
-      "prob = 0.0022%\n",
-      "prob = 0.0041%\n",
-      "prob = 0.0020%\n",
-      "overall = 0.000000000000000000000000019810142833179808423708928452504930693739751317462253127874011397448411955779512538811104604974%\n",
-      "init = 0.0018%\n",
-      "prob = 0.0001%\n",
-      "prob = 0.0661%\n",
-      "prob = 0.0116%\n",
-      "prob = 0.0372%\n",
-      "prob = 0.0527%\n",
-      "overall = 0.000000000000000000000028319656298544513007787001908833752774128995244739911443856972533134053193748513876926153898239136%\n",
-      "init = 0.0015%\n",
-      "prob = 0.0024%\n",
-      "prob = 0.0032%\n",
-      "prob = 0.0005%\n",
-      "prob = 0.0082%\n",
-      "prob = 0.0000%\n",
-      "overall = 0.000000000000000000000000000225408666049081861066679704659925297474563477214086961810001736271474249615441587391018174458%\n",
-      "3 ---> prints values from 0 to 22\n"
+      "Choices:  [\"prints 'hello world' to the terminal\", 'prints values from 1 to 10', 'computes first 10 prime numbers', 'prints values from 0 to 22']\n"
      ]
     }
    ],
@@ -122,15 +91,56 @@
     "\n",
     "targets = re.findall(r\"choice: (.+)\", prompt)\n",
     "\n",
-    "print(\"Choices: \", targets)\n",
-    "\n",
+    "print(\"Choices: \", targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prints| '|hello| world|'| to| the| terminal\n",
+      "prints| values| from| 1| to| 10\n",
+      "comp|utes| first| 10| prime| numbers\n",
+      "prints| values| from| 0| to| 22\n",
+      "prints| values| from| 1| to| MAX|_|INT| and| explodes\n"
+     ]
+    }
+   ],
+   "source": [
+    "targets.append(\"prints values from 1 to MAX_INT and explodes\")\n",
+    "debug_info = model._tokenize_label(targets)\n",
+    "for i, tokens in debug_info:\n",
+    "    readable_tokens = (\n",
+    "        (\n",
+    "            model.decode(token.unsqueeze(0)),\n",
+    "            token.item()\n",
+    "        )\n",
+    "        for token\n",
+    "        in tokens[0]\n",
+    "    )\n",
+    "    print(\"|\".join(raw_token for raw_token, token_idx in readable_tokens))\n",
+    "    #for raw_token, token_idx in readable_tokens:\n",
+    "    #    print(f\" {raw_token!r} ({token_idx})\")\n",
+    "    #print(\"\\n\" + \"-\" * 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "idx = model.multiple_choice_prompts(\n",
     "    prompt, targets,\n",
     "    time=False,\n",
     "    strategy=MultipleChoiceStrategy.MULTIPLY\n",
     ")\n",
     "print(idx, \"--->\", targets[idx])\n",
-    "\n",
     "# 350M FIRST_BRANCH: 2\n",
     "# 350M LOGIT_AVERAGE: 1\n",
     "# 350M MULTIPLY: 3"
