--- a/codexglue-test.ipynb
+++ b/codexglue-test.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "c9fe02f4-5e7e-4429-ba46-714175bb7549",
    "metadata": {},
    "outputs": [
@@ -40,133 +40,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-14@19:37:33|model.device] Starting timer.\n",
+      "[2024-05-20@21:30:21|model.device] Starting timer.\n",
       "Configuring torch device...\n",
       "Using device: cuda:0 aka cuda:0\n",
-      "[2024-05-14@19:37:33|model.device] Time elapsed: ~0s\n",
-      "[2024-05-14@19:37:33|model.tokenizer] Starting timer.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6806e79be6e3428d912b48b5e3c68540",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/240 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d14c34dbd8c407bbc738d0a6cf04692",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json:   0%|          | 0.00/798k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d89ba2a36c4946b8b2ba1cb2dce292bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95a72f66a90741e8911d8ac523164265",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/2.11M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c14ae16cf52a4fcf95a539fc9714f7e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "added_tokens.json:   0%|          | 0.00/1.00k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02af455877ff445492530b9f78e38075",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/90.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-05-14@19:37:33|model.tokenizer] Time elapsed: 686ms\n",
-      "[2024-05-14@19:37:33|model.model] Starting timer.\n",
+      "[2024-05-20@21:30:21|model.device] Time elapsed: 80ms\n",
+      "[2024-05-20@21:30:21|model.tokenizer] Starting timer.\n",
+      "[2024-05-20@21:30:21|model.tokenizer] Time elapsed: 197ms\n",
+      "[2024-05-20@21:30:21|model.model] Starting timer.\n",
       "Obtaining model...\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d022b93b21ab4bf7a8f4a6bba85c4437",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/999 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6b855ddf3644dbe838e903dffab56a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/32.2G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stderr",
@@ -179,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-14@19:48:52|model.model] Time elapsed: 11min 18s\n"
+      "[2024-05-20@21:31:01|model.model] Time elapsed: 39s 342ms\n"
      ]
     }
    ],
@@ -190,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "be8f686a-19ee-47f4-8f0b-1423fd1862d6",
    "metadata": {},
    "outputs": [
@@ -208,6 +90,52 @@
     "fixed = \"public void METHOD_1 ( java.lang.Class VAR_1 ) { android.content.Intent intent = new android.content.Intent ( this , VAR_1 ) ; METHOD_2 ( intent ) ; } \"\n",
     "print(buggy)\n",
     "print(fixed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "59861102-ce83-4a1e-8810-73457f26cd68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "// You are given a piece of buggy code. Your task is to fix the error, and generate the corrected code.\n",
+      "// Fix the following code:\n",
+      "private void METHOD_1 ( java.lang.Class VAR_1 ) { android.content.Intent intent = new android.content.Intent ( this , VAR_1 ) ; METHOD_2 ( intent ) ; } \n",
+      "\n",
+      "------------------------------\n",
+      "[2024-05-20@22:36:52|model.tokenize] Starting timer.\n",
+      "[2024-05-20@22:36:52|model.tokenize] Time elapsed: 109ms\n",
+      "Generating...\n",
+      "[2024-05-20@22:36:52|model.generate] Starting timer.\n",
+      "[2024-05-20@22:47:35|model.generate] Time elapsed: 10min 43s\n",
+      "private void METHOD_2 ( android.content.Intent intent ) { android.content.Intent intent = new android.content.Intent ( this, VAR_1 ) ; } \n",
+      "\n",
+      "// The buggy code is:\n",
+      "private void METHOD_1 ( java.lang.Class VAR_1 ) { android.content.Intent intent = new android.content.Intent ( this, VAR_1 ) ; METHOD_2 ( intent ) ; } \n",
+      "private void METHOD_2 ( android.content.Intent intent ) { android.content.Intent intent =\n"
+     ]
+    }
+   ],
+   "source": [
+    "BUGS2FIX_PROMPT_2 = \"// You are given a piece of buggy code. Your task is to fix the error, and generate the corrected code.\\n// Fix the following code:\\n{code}\\n\"\n",
+    "#BUGS2FIX_PROMPT_2 = \"This code has at least one error. Your task is to fix the error(s) and return corrected code. Your response should be a corrected version of private void METHOD_1's arguments and code. The error(s) might be in either the arguments, code, or both. You may not change the method publicity, return type, or name. In your response, do not reference METHOD_2. Your response must be code which accomplishes the intented result of the original buggy code.\\n```\\n{code}\\n```\\n\\n```\"\n",
+    "case_prompt = BUGS2FIX_PROMPT_2.format(code=buggy)\n",
+    "print(case_prompt)\n",
+    "print(\"-\"*30)\n",
+    "tokens = model.generate(case_prompt, time=True, max_new_tokens=128)\n",
+    "print(model.decode(tokens, inputs=model.inputs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce8f974-5024-4c12-a8be-8b7477c50ea1",
+   "metadata": {},
+   "source": [
+    "## Other prompts"
    ]
   },
   {
