--- a/commit-message.ipynb
+++ b/commit-message.ipynb
@@ -106,9 +106,7 @@
   {
    "cell_type": "markdown",
    "id": "750f419d-f179-42bc-ae6d-1476d01d4299",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Generate Output"
    ]
@@ -569,7 +567,7 @@
     "\n",
     "prompt_family_answers = []\n",
     "for prompt_index in range(len(COMMIT_PROMPTS)):\n",
-    "    output_dir = f\"./data/output/commit/prompt{prompt_index}\"\n",
+    "    output_dir = f\"./output/commit/prompt{prompt_index}\"\n",
     "    family_answers = {}\n",
     "    for key, model_name in ModelFamily.CodeGen1.multi.items():\n",
     "        output_path = os.path.join(output_dir, f\"codegen1-multi-{key}.output\")\n",
