add bootstrapping figs and code

--- a/bugs2fix.ipynb
+++ b/bugs2fix.ipynb
@@ -15,21 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from run_battery import BatteryRunner\n",
+    "from run_battery import BatteryRunner, BatteryConfigs\n",
     "\n",
-    "runner = BatteryRunner(\n",
-    "    case_count=100,\n",
-    "    meta_count=None,\n",
-    "    task=\"bugs2fix\",\n",
-    "    prompts=[\n",
-    "        \"// the buggy version of the code\\n{prompt}\\n// the fixed version of the code\\n\",\n",
-    "        \"// You are given a piece of buggy code. Your task is to fix the error, and generate the corrected code. Fix the following code:\\n{prompt}\\n\",\n",
-    "    ],\n",
-    "    battery_path=\"./data/CodeXGLUE/Code-Code/code-refinement/data/small\",\n",
-    "    questions_file=\"test.buggy-fixed.buggy\",\n",
-    "    truth_file=\"test.buggy-fixed.fixed\",\n",
-    ")"
+    "runner = BatteryRunner.of(BatteryConfigs.Bugs2Fix)"
    ]
   },
   {
