remaster figure generation

--- a/commit-message.ipynb
+++ b/commit-message.ipynb
@@ -16,18 +16,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from run_battery import BatteryRunner\n",
+    "from run_battery import BatteryRunner, BatteryConfigs\n",
     "\n",
-    "runner = BatteryRunner(\n",
-    "    case_count=100,\n",
-    "    meta_count=None,\n",
-    "    task=\"commit\",\n",
-    "    prompts=[\n",
-    "        \"/* diff of changes\\n{prompt}\\n*/\\n// a summary of the above diff is:\\n// -\"\n",
-    "    ],\n",
-    "    battery_path=\"./data/commits/commit_message_generation_codisum.json\",\n",
-    "    json_battery=True,\n",
-    ")"
+    "runner = BatteryRunner.of(BatteryConfigs.CommitMessageGeneration)"
    ]
   },
   {
