--- a/tabulate-results.ipynb
+++ b/tabulate-results.ipynb
@@ -52,20 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3208f992-2269-4aa9-8b68-5f2b182a9af6",
    "metadata": {},
    "outputs": [],
    "source": [
     "to_tabulate = [\n",
     "    BatteryConfigs.Bugs2Fix,\n",
+    "    BatteryConfigs.Bugs2FixChecklist,\n",
     "    BatteryConfigs.Code2Code,\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "62848b4b-5708-4163-871f-6eaefd044737",
    "metadata": {},
    "outputs": [
@@ -73,27 +74,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline\n",
+      "\\hline Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline \\hline\n",
       "EM & prompt0 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
       "EM & prompt1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
-      "BLEU & prompt0 & 0.4882 & 0.5006 & 0.4571 & \\textbf{0.5607} & 0.0252 & 0.0218 \\\\\n",
+      "EM & prompt2 & 0 & 0 & 0 & \\textbf{0.0100} & 0.0015 & 0.0012 \\\\ \\hline\n",
+      "BLEU & prompt0 & 0.4882 & 0.5006 & 0.4571 & 0.5607 & 0.0252 & 0.0218 \\\\\n",
       "BLEU & prompt1 & 0.1416 & 0.1801 & 0.2297 & 0.1747 & 0.0307 & 0.0256 \\\\\n",
-      "CodeBLEU (Java) & prompt0 & 0.6139 & 0.6458 & 0.5699 & \\textbf{0.6492} & 0.0303 & 0.0247 \\\\\n",
-      "CodeBLEU (Java) & prompt1 & 0.1867 & 0.2634 & 0.3111 & 0.2642 & 0.0404 & 0.0369 \\\\\n",
+      "BLEU & prompt2 & 0.4920 & \\textbf{0.5989} & 0.4642 & 0.5689 & 0.0526 & 0.0449 \\\\ \\hline\n",
+      "CodeBLEU (Java) & prompt0 & 0.6134 & 0.6464 & 0.5699 & 0.6492 & 0.0304 & 0.0247 \\\\\n",
+      "CodeBLEU (Java) & prompt1 & 0.1862 & 0.2634 & 0.3111 & 0.2642 & 0.0406 & 0.0371 \\\\\n",
+      "CodeBLEU (Java) & prompt2 & 0.5918 & \\textbf{0.6909} & 0.5499 & 0.6595 & 0.0538 & 0.0455 \\\\ \\hline\n",
       "------------------------------\n",
-      "Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline\n",
+      "\\hline Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline \\hline\n",
+      "EM & prompt0 & 0.0100 & 0 & 0.0100 & 0.0100 & 0.0041 & 0.0033 \\\\\n",
+      "EM & prompt1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+      "EM & prompt2 & 0 & 0 & \\textbf{0.0200} & 0.0100 & 0.0073 & 0.0063 \\\\ \\hline\n",
+      "BLEU & prompt0 & 0.5737 & 0.6004 & 0.5456 & 0.6042 & 0.0219 & 0.0175 \\\\\n",
+      "BLEU & prompt1 & 0.1605 & 0.1759 & 0.3572 & 0.0145 & \\textbf{0.1037} & 0.0890 \\\\\n",
+      "BLEU & prompt2 & 0.5509 & \\textbf{0.6197} & 0.5399 & 0.6149 & 0.0326 & 0.0278 \\\\ \\hline\n",
+      "CodeBLEU (Java) & prompt0 & 0.6532 & 0.6766 & 0.6131 & 0.6867 & 0.0263 & 0.0220 \\\\\n",
+      "CodeBLEU (Java) & prompt1 & 0.1853 & 0.2495 & 0.4194 & 0.0521 & \\textbf{0.1145} & 0.0952 \\\\\n",
+      "CodeBLEU (Java) & prompt2 & 0.6154 & \\textbf{0.6989} & 0.6321 & 0.6983 & 0.0315 & 0.0266 \\\\ \\hline\n",
+      "------------------------------\n",
+      "\\hline Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline \\hline\n",
       "EM & prompt0 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
       "EM & prompt1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
       "EM & prompt2 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
-      "EM & prompt3 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+      "EM & prompt3 & 0 & 0 & 0 & 0 & 0 & 0 \\\\ \\hline\n",
       "BLEU & prompt0 & 0.1474 & 0.1273 & 0.1394 & \\textbf{0.1491} & 0.0078 & 0.0063 \\\\\n",
       "BLEU & prompt1 & 0.1212 & 0.0719 & 0.0693 & 0.1429 & 0.0269 & 0.0254 \\\\\n",
       "BLEU & prompt2 & 0.0886 & 0.0364 & 0.0083 & 0.0247 & 0.0245 & 0.0227 \\\\\n",
-      "BLEU & prompt3 & 0.0157 & 0.0204 & 0.0209 & 0.0269 & 0.0012 & 0.0009 \\\\\n",
+      "BLEU & prompt3 & 0.0157 & 0.0204 & 0.0209 & 0.0269 & 0.0012 & 0.0009 \\\\ \\hline\n",
       "CodeBLEU (C$^\\sharp$) & prompt0 & 0.2291 & 0.2362 & 0.2614 & \\textbf{0.2682} & 0.0076 & 0.0066 \\\\\n",
       "CodeBLEU (C$^\\sharp$) & prompt1 & 0.1940 & 0.1594 & 0.1805 & 0.2655 & 0.0201 & 0.0190 \\\\\n",
       "CodeBLEU (C$^\\sharp$) & prompt2 & 0.1817 & 0.0942 & 0.0325 & 0.0650 & 0.0446 & 0.0405 \\\\\n",
-      "CodeBLEU (C$^\\sharp$) & prompt3 & 0.0793 & 0.0888 & 0.0899 & 0.1058 & 0.0022 & 0.0017 \\\\\n",
+      "CodeBLEU (C$^\\sharp$) & prompt3 & 0.0793 & 0.0888 & 0.0899 & 0.1058 & 0.0022 & 0.0017 \\\\ \\hline\n",
       "------------------------------\n"
      ]
     }
@@ -122,10 +137,12 @@
     "        metric = Metric.from_shortname(metric_shortname)\n",
     "\n",
     "        best_result = None\n",
+    "        prompt_count = 0\n",
     "        for prompt_name, results in data.items():\n",
     "            max_per = max(results)\n",
     "            if best_result is None or max_per > best_result:\n",
     "                best_result = max_per\n",
+    "            prompt_count += 1\n",
     "        \n",
     "        for prompt_name, results in data.items():\n",
     "            \n",
@@ -154,8 +171,11 @@
     "                *emergence_evaluations,\n",
     "            ])\n",
     "\n",
+    "    print(\"\\\\hline \", end=\"\")\n",
     "    for idx, row in enumerate(table):\n",
     "        row_display = \" & \".join(row) + \" \\\\\\\\\"\n",
+    "        if idx % prompt_count == 0:\n",
+    "            row_display += \" \\\\hline\"\n",
     "        if idx == 0:\n",
     "            row_display += \" \\\\hline\"\n",
     "            \n",
