--- a/verify-result.ipynb
+++ b/verify-result.ipynb
@@ -11,6 +11,199 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2060a0be-6194-4601-addc-364aaae8346c",
+   "metadata": {},
+   "source": [
+    "# verify Bugs2Fix/prompt0/350M/index 0 (line 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c8772e4b-a510-4979-927c-8f030e3b2447",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-06-20@05:31:36|model.device] Starting timer.\n",
+      "Configuring torch device...\n",
+      "Using device: cuda:0 aka cuda:0\n",
+      "[2024-06-20@05:31:36|model.device] Time elapsed: 28ms\n",
+      "[2024-06-20@05:31:36|model.tokenizer] Starting timer.\n",
+      "[2024-06-20@05:31:36|model.tokenizer] Time elapsed: 195ms\n",
+      "[2024-06-20@05:31:36|model.model] Starting timer.\n",
+      "Obtaining model...\n",
+      "[2024-06-20@05:31:40|model.model] Time elapsed: 3s 365ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = ModelFamily.CodeGen1.multi[\"350M\"]\n",
+    "model = Model(model_name)\n",
+    "model.configure(time=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "08884fc2-1799-460a-b4fe-d765564880c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'// the buggy version of the code\\nprivate TYPE_1 getType ( TYPE_2 VAR_1 ) { TYPE_3 VAR_2 = new TYPE_3 ( STRING_1 ) ; return new TYPE_1 ( VAR_2 , VAR_2 ) ; }\\n// the fixed version of the code\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_case = \"private TYPE_1 getType ( TYPE_2 VAR_1 ) { TYPE_3 VAR_2 = new TYPE_3 ( STRING_1 ) ; return new TYPE_1 ( VAR_2 , VAR_2 ) ; } \"\n",
+    "prompt = \"// the buggy version of the code\\n{prompt}\\n// the fixed version of the code\\n\"\n",
+    "model_input = prompt.format(prompt=test_case.strip())\n",
+    "print(repr(model_input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ad5807f8-fbe4-461a-b319-9ecb7a5561ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating...\n",
+      "private TYPE_1 getType ( TYPE_2 VAR_1 ) { TYPE_3 VAR_2 = new TYPE_3 ( STRING_1 ) ; return new TYPE_1 ( VAR_2, VAR_2\n",
+      "Generating...\n",
+      " ) ; }\n",
+      "// the buggy version of the code\n",
+      "private TYPE_1 getType ( TYPE_2 VAR_1 ) { TYPE_3 VAR_2 = new TYPE_3 ( STRING_1 ) ; return new TYPE\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' ) ; }'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = model.generate_until(model_input, stops=[\"\\n\"])\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c433d7a-2f4d-4f35-8152-3e0fc280d527",
+   "metadata": {},
+   "source": [
+    "## verify Bugs2Fix/prompt1/2B/(index 4/line 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e2abcfb1-a9bd-40c9-8ef2-648ee9662df8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-06-19@19:07:20|model.device] Starting timer.\n",
+      "Configuring torch device...\n",
+      "Using device: cuda:0 aka cuda:0\n",
+      "[2024-06-19@19:07:20|model.device] Time elapsed: 47ms\n",
+      "[2024-06-19@19:07:20|model.tokenizer] Starting timer.\n",
+      "[2024-06-19@19:07:20|model.tokenizer] Time elapsed: 292ms\n",
+      "[2024-06-19@19:07:20|model.model] Starting timer.\n",
+      "Obtaining model...\n",
+      "[2024-06-19@19:07:57|model.model] Time elapsed: 37s 136ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = ModelFamily.CodeGen1.multi[\"2B\"]\n",
+    "model = Model(model_name)\n",
+    "model.configure(time=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "69f19bb0-0738-4a07-85cc-362b5bcb2b58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'// You are given a piece of buggy code. Your task is to fix the error, and generate the corrected code. Fix the following code:\\npublic void METHOD_1 ( ) { TYPE_1 . METHOD_2 ( METHOD_3 ( ) , METHOD_4 ( ) . getString ( VAR_1 ) , VAR_2 ) . show ( ) ; } \\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_case = \"public void METHOD_1 ( ) { TYPE_1 . METHOD_2 ( METHOD_3 ( ) , METHOD_4 ( ) . getString ( VAR_1 ) , VAR_2 ) . show ( ) ; } \"\n",
+    "prompt = \"// You are given a piece of buggy code. Your task is to fix the error, and generate the corrected code. Fix the following code:\\n{prompt}\\n\"\n",
+    "model_input = prompt.format(prompt=test_case)\n",
+    "print(repr(model_input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d1c1769e-dc0f-48cf-bbcc-d3758ede512c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'public class TYPE_1 {'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = model.generate_until(model_input, stops=[\"\\n\"])\n",
+    "output.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c29520e-affc-4051-b010-208c1cf97717",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ea392f0-e33f-4eaa-86cd-6365aa6271fb",
+   "metadata": {},
+   "source": [
+    "## i forgot what below was"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "bb097a82-d6f5-4129-8ad9-da4737419144",
