--- a/tabulate-results.ipynb
+++ b/tabulate-results.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3208f992-2269-4aa9-8b68-5f2b182a9af6",
    "metadata": {},
    "outputs": [],
@@ -61,12 +61,13 @@
     "    BatteryConfigs.Bugs2Fix,\n",
     "    BatteryConfigs.Bugs2FixChecklist,\n",
     "    BatteryConfigs.Code2Code,\n",
+    "    BatteryConfigs.CommitMessageGeneration,\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "62848b4b-5708-4163-871f-6eaefd044737",
    "metadata": {},
    "outputs": [
@@ -74,6 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "## Bugs2fix\n",
       "\\hline Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline \\hline\n",
       "EM & prompt0 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
       "EM & prompt1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
@@ -85,6 +87,7 @@
       "CodeBLEU (Java) & prompt1 & 0.1862 & 0.2634 & 0.3111 & 0.2642 & 0.0406 & 0.0371 \\\\\n",
       "CodeBLEU (Java) & prompt2 & 0.5918 & \\textbf{0.6909} & 0.5499 & 0.6595 & 0.0538 & 0.0455 \\\\ \\hline\n",
       "------------------------------\n",
+      "## Bugs2fix (Checklist)\n",
       "\\hline Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline \\hline\n",
       "EM & prompt0 & 0.0100 & 0 & 0.0100 & 0.0100 & 0.0041 & 0.0033 \\\\\n",
       "EM & prompt1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
@@ -96,6 +99,7 @@
       "CodeBLEU (Java) & prompt1 & 0.1853 & 0.2495 & 0.4194 & 0.0521 & \\textbf{0.1145} & 0.0952 \\\\\n",
       "CodeBLEU (Java) & prompt2 & 0.6154 & \\textbf{0.6989} & 0.6321 & 0.6983 & 0.0315 & 0.0266 \\\\ \\hline\n",
       "------------------------------\n",
+      "## CodeTrans\n",
       "\\hline Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline \\hline\n",
       "EM & prompt0 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
       "EM & prompt1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
@@ -109,6 +113,11 @@
       "CodeBLEU (C$^\\sharp$) & prompt1 & 0.1940 & 0.1594 & 0.1805 & 0.2655 & 0.0201 & 0.0190 \\\\\n",
       "CodeBLEU (C$^\\sharp$) & prompt2 & 0.1817 & 0.0942 & 0.0325 & 0.0650 & 0.0446 & 0.0405 \\\\\n",
       "CodeBLEU (C$^\\sharp$) & prompt3 & 0.0793 & 0.0888 & 0.0899 & 0.1058 & 0.0022 & 0.0017 \\\\ \\hline\n",
+      "------------------------------\n",
+      "## Commit Message Generation\n",
+      "\\hline Metric & Prompt & 350M & 2.7B & 6.1B & 16.1B & RMSD & MAE \\\\ \\hline \\hline\n",
+      "B-Moses & prompt0 & 0 & 0 & 0 & 0 & 0 & 0 \\\\ \\hline\n",
+      "B-Norm & prompt0 & 0.0051 & 0.0014 & \\textbf{0.0063} & 0.0059 & 0.0017 & 0.0015 \\\\ \\hline\n",
       "------------------------------\n"
      ]
     }
@@ -171,6 +180,7 @@
     "                *emergence_evaluations,\n",
     "            ])\n",
     "\n",
+    "    print(\"##\", config[\"display_name\"])\n",
     "    print(\"\\\\hline \", end=\"\")\n",
     "    for idx, row in enumerate(table):\n",
     "        row_display = \" & \".join(row) + \" \\\\\\\\\"\n",
