update graphics code to output PDFs

--- a/bugs2fix.ipynb
+++ b/bugs2fix.ipynb
@@ -51,7 +51,9 @@
   {
    "cell_type": "markdown",
    "id": "00e7c680-4188-434c-8d6f-09d872fef397",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Generate Output"
    ]
@@ -589,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f2db0345-0256-42e4-8f1d-2e5609d511f7",
    "metadata": {},
    "outputs": [
@@ -597,7 +599,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved figure to ./figs/b2f-all.png\n"
+      "Saved figure to ./figs/b2f-all.pdf\n"
      ]
     },
     {
@@ -642,7 +644,7 @@
        "   0.6594912699189425]}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,14 +652,16 @@
    "source": [
     "runner.render_metric_multi(\n",
     "    [ metric.ExactMatch, metric.BLEU, metric.CodeBLEUJava ],\n",
-    "    save=\"./figs/b2f-all.png\",\n",
+    "    save=\"./figs/b2f-all.pdf\",\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6401e9e0-e997-47e0-8487-c12c5c883655",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Individual Graphs"
    ]
