--- a/code2code-trans.ipynb
+++ b/code2code-trans.ipynb
@@ -1502,7 +1502,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved figure to ./figs/c2c-all.png\n"
+      "Saved figure to ./figs/pdf/c2c-all.pdf\n"
      ]
     },
     {
@@ -1573,14 +1573,16 @@
    "source": [
     "runner.render_metric_multi(\n",
     "    [ metric.ExactMatch, metric.BLEU, metric.CodeBLEUCSharp ],\n",
-    "    save=\"./figs/c2c-all.png\",\n",
+    "    save=\"./figs/pdf/c2c-all.pdf\",\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "11c3a3af-8124-4318-8fa9-f5953a1a89b7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Combined"
    ]
