--- a/commit-message.ipynb
+++ b/commit-message.ipynb
@@ -467,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved figure to ./figs/cmg-all.png\n"
+      "Saved figure to ./figs/pdf/cmg-all.pdf\n"
      ]
     },
     {
@@ -498,14 +498,16 @@
    "source": [
     "runner.render_metric_multi(\n",
     "    [ metric.BMoses, metric.BNorm ],\n",
-    "    save=\"./figs/cmg-all.png\",\n",
+    "    save=\"./figs/pdf/cmg-all.pdf\",\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b8c970eb-9447-4e78-9ac6-8493523ec8f3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Metric: BLEU"
    ]
