--- a/metric-progress.ipynb
+++ b/metric-progress.ipynb
@@ -159,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved figure to figs/b2f-bootstrap-all.png\n"
+      "Saved figure to figs/pdf/b2f-bootstrap-all.pdf\n"
      ]
     },
     {
@@ -181,7 +181,7 @@
     "    iterations=iterations,\n",
     "    use_cache=True,\n",
     "    seed=SEED,\n",
-    "    save=\"figs/b2f-bootstrap-all.png\",\n",
+    "    save=\"figs/pdf/b2f-bootstrap-all.pdf\",\n",
     ")"
    ]
   },
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e768a697-97f2-4db5-8d53-7dad07ef4132",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved figure to figs/b2f-cl-bootstrap-all.png\n"
+      "Saved figure to figs/pdf/b2f-cl-bootstrap-all.pdf\n"
      ]
     },
     {
@@ -357,7 +357,7 @@
     "    iterations=iterations,\n",
     "    use_cache=True,\n",
     "    seed=SEED,\n",
-    "    save=\"figs/b2f-cl-bootstrap-all.png\",\n",
+    "    save=\"figs/pdf/b2f-cl-bootstrap-all.pdf\",\n",
     ")"
    ]
   },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "688644ac-fd3c-4c39-b222-b84d25dd8b05",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a93cae4e-b98a-47cc-9c7f-452d4cf7af0a",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2cd19eb7-dc50-4694-9af8-382ee285ae6b",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved figure to figs/c2c-bootstrap-all.png\n"
+      "Saved figure to figs/pdf/c2c-bootstrap-all.pdf\n"
      ]
     },
     {
@@ -517,7 +517,7 @@
     "    iterations=iterations,\n",
     "    use_cache=True,\n",
     "    seed=SEED,\n",
-    "    save=\"figs/c2c-bootstrap-all.png\",\n",
+    "    save=\"figs/pdf/c2c-bootstrap-all.pdf\",\n",
     ")"
    ]
   },
